--- a/src/WpfAnimation/MainWindow.xaml
+++ b/src/WpfAnimation/MainWindow.xaml
@@ -2,7 +2,75 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <Window.Resources>
+        <Style x:Key="AnimatingItemsControl" TargetType="{x:Type ItemsControl}">
+            <Setter Property="Opacity" Value="0" />
+            <Setter Property="LayoutTransform">
+                <Setter.Value>
+                    <ScaleTransform ScaleY="0" />
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="Visibility" Value="Visible">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard SpeedRatio="15">
+                                <DoubleAnimation BeginTime="0:0:0" Storyboard.TargetProperty="LayoutTransform.ScaleY" To="1.0" Duration="0:0:3">
+                                    <DoubleAnimation.EasingFunction>
+                                        <PowerEase Power="3" EasingMode="EaseIn" />
+                                    </DoubleAnimation.EasingFunction>
+                                </DoubleAnimation>
+                                <DoubleAnimation BeginTime="0:0:6" Storyboard.TargetProperty="Opacity" To="1.0" Duration="0:0:4" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+
+                    <Trigger.ExitActions>
+                        <BeginStoryboard>
+                            <Storyboard  SpeedRatio="15">
+                                <DoubleAnimation BeginTime="0:0:0" Storyboard.TargetProperty="Opacity" To="0.0" Duration="0:0:4" />
+                                <DoubleAnimation BeginTime="0:0:5" Storyboard.TargetProperty="LayoutTransform.ScaleY" To="0.0" Duration="0:0:3">
+                                    <DoubleAnimation.EasingFunction>
+                                        <PowerEase Power="3" EasingMode="EaseIn" />
+                                    </DoubleAnimation.EasingFunction>
+                                </DoubleAnimation>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.ExitActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <DataTemplate x:Key="SupplyItemDataTemplate">
+            <Grid Background="Transparent" HorizontalAlignment="Stretch">
+                <ItemsControl Style="{StaticResource AnimatingItemsControl}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ContentPresenter Content="{Binding}" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.Items>
+                        <TextBlock Text="ItemsControl1"/>
+                        <TextBlock Text="ItemsControl2"/>
+                        <TextBlock Text="ItemsControl3"/>
+                    </ItemsControl.Items>
+                </ItemsControl>
+            </Grid>
+        </DataTemplate>
+    </Window.Resources>
+    <StackPanel Orientation="Horizontal">
+        <ListBox SelectionMode="Extended" HorizontalContentAlignment="Stretch" Width="200">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="IndianRed" BorderThickness="1">
+                        <ContentPresenter Content="{Binding}" ContentTemplate="{StaticResource SupplyItemDataTemplate}" />
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <ListBox.Items>
+                <TextBlock Text="Item1" />
+                <TextBlock Text="Item2"/>
+                <TextBlock Text="Item3"/>
+            </ListBox.Items>
+        </ListBox>
+    </StackPanel>
 </Window>
