--- a/src/WpfAnimation/App.xaml
+++ b/src/WpfAnimation/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfAnimation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindowView.xaml">
     <Application.Resources>
          
     </Application.Resources>
