--- a/src/WpfAnimation/Views/MainWindowView.xaml
+++ b/src/WpfAnimation/Views/MainWindowView.xaml
@@ -44,32 +44,47 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
-        <DataTemplate x:Key="ItemDataTemplate">
-            <Grid Background="Transparent" HorizontalAlignment="Stretch">
-                <ItemsControl Style="{StaticResource AnimatingItemsControl}" >
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <ContentPresenter Content="{Binding}" />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.Items>
-                        <TextBlock Text="{Binding}" />
-                    </ItemsControl.Items>
-                </ItemsControl>
-            </Grid>
+        <DataTemplate x:Key="ListItemDataTemplate">
+            <Border BorderBrush="Transparent" BorderThickness="1" Padding="5" Margin="0 -1 0 0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="50"/>
+                    </Grid.ColumnDefinitions>
+                    <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="1" Width="35" Height="35" />
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Text="{Binding Name}" Margin="2 0 2 0" Foreground="Gray" FontSize="13" FontFamily="Helvetica"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding CommitId}" Margin="2 0 2 0" Foreground="Gray" FontSize="13" FontFamily="Helvetica" />
+                            <TextBlock Text="{Binding CommitDescription}" Margin="2 0 2 0" FontSize="13" FontFamily="Helvetica" />
+                        </StackPanel>
+                    </StackPanel>
+                    <TextBlock Grid.Column="2" Text="{Binding Date, StringFormat=\{0:dd.MM.yy\}}" Foreground="Gray" FontSize="13" FontFamily="Helvetica" />
+                </Grid>
+            </Border>
         </DataTemplate>
     </Window.Resources>
     <StackPanel Orientation="Horizontal">
-        <ListBox SelectionMode="Single"  HorizontalContentAlignment="Stretch" Width="200" ItemsSource="{Binding ListBoxItems}" SelectedItem="{Binding SelectedItem}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border BorderBrush="IndianRed" BorderThickness="1">
-                        <ContentPresenter Content="{Binding}" ContentTemplate="{StaticResource ItemDataTemplate}" />
-                    </Border>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
+        <ListBox SelectionMode="Single" ItemsSource="{Binding ListBoxItems}" 
+                 HorizontalContentAlignment="Stretch" Width="350" SelectedItem="{Binding SelectedItem}"
+                 ItemTemplate="{StaticResource ListItemDataTemplate}">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Opacity" Value="1" />
+                    <Setter Property="LayoutTransform">
+                        <Setter.Value>
+                            <ScaleTransform ScaleY="1" />
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="Background" Value="Transparent" />
+                    <Style.Resources>
+                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FE9426"/>
+                    </Style.Resources>
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
-        <Button Width="60" Height="25" Content="Add" Command="{Binding AddItemCommand}"/>
-        <Button Width="60" Height="25" Content="Remove" Command="{Binding DeleteListBoxItemCommand}"/>
+        <Button Width="60" Height="25" Content="Add" VerticalAlignment="Top" Command="{Binding AddItemCommand}"/>
+        <Button Width="60" Height="25" Content="Remove" VerticalAlignment="Top" Command="{Binding DeleteListBoxItemCommand}"/>
     </StackPanel>
 </catel:Window>
