--- a/src/WpfAnimation/Views/MainWindowView.xaml
+++ b/src/WpfAnimation/Views/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:Window x:Class="WpfAnimation.Views.MainWindowView"
+﻿<catel:Window x:Class="WpfAnimation.Demo.Views.MainWindowView"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:catel="http://catel.codeplex.com"
