--- a/src/WpfAnimation/Views/MainWindowView.xaml
+++ b/src/WpfAnimation/Views/MainWindowView.xaml
@@ -45,7 +45,7 @@
             </Style.Triggers>
         </Style>
         <DataTemplate x:Key="ListItemDataTemplate">
-            <Border BorderBrush="Transparent" BorderThickness="1" Padding="5" Margin="0 -1 0 0">
+            <Border BorderBrush="Transparent" Padding="5" >
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="50"/>
@@ -54,15 +54,35 @@
                     </Grid.ColumnDefinitions>
                     <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="1" Width="35" Height="35" />
                     <StackPanel Grid.Column="1">
-                        <TextBlock Text="{Binding Name}" Margin="2 0 2 0" Foreground="Gray" FontSize="13" FontFamily="Helvetica"/>
+                        <TextBlock Text="{Binding Name}"/>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding CommitId}" Margin="2 0 2 0" Foreground="Gray" FontSize="13" FontFamily="Helvetica" />
-                            <TextBlock Text="{Binding CommitDescription}" Margin="2 0 2 0" FontSize="13" FontFamily="Helvetica" />
+                            <TextBlock Text="{Binding CommitId}" />
+                            <TextBlock x:Name="CommitDescription" Text="{Binding CommitDescription}" Foreground="Black" />
                         </StackPanel>
                     </StackPanel>
-                    <TextBlock Grid.Column="2" Text="{Binding Date, StringFormat=\{0:dd.MM.yy\}}" Foreground="Gray" FontSize="13" FontFamily="Helvetica" />
+                    <TextBlock Grid.Column="2" Text="{Binding Date, StringFormat=\{0:dd.MM.yy\}}"  />
                 </Grid>
             </Border>
+            <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" 
+                             Value="True">
+                    <Setter Property="Foreground" TargetName="CommitDescription" Value="White"/>
+                </DataTrigger>
+            </DataTemplate.Triggers>
+            <DataTemplate.Resources>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="Foreground" Value="Gray"/>
+                    <Setter Property="FontFamily" Value="Helvetica"/>
+                    <Setter Property="Margin" Value="2 0 2 0"/>
+                    <Setter Property="FontSize" Value="13"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" 
+                             Value="True">
+                            <Setter Property="Foreground" Value="White"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataTemplate.Resources>
         </DataTemplate>
     </Window.Resources>
     <StackPanel Orientation="Horizontal">
