--- a/src/WpfAnimation/Views/MainWindowView.xaml
+++ b/src/WpfAnimation/Views/MainWindowView.xaml
@@ -2,8 +2,8 @@
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:catel="http://catel.codeplex.com"
-              xmlns:behaviors="clr-namespace:WpfAnimation.Behaviors;assembly=WpfAnimation.Core"
-              Title="MainWindow" Height="350" Width="525">
+              xmlns:wpfAnimation="clr-namespace:WpfAnimation;assembly=WpfAnimation.Core"
+              Title="WpfAnimation.Demo" Height="350" Width="525">
     <Window.Resources>
         <Style x:Key="AnimatingItemsControl" TargetType="{x:Type ItemsControl}">
             <Setter Property="Opacity" Value="0" />
@@ -95,7 +95,7 @@
         </DataTemplate>
     </Window.Resources>
     <StackPanel Orientation="Horizontal">
-        <ListBox SelectionMode="Single" behaviors:ItemsSourceBehavior.ItemsSource="{Binding ListBoxItems}"
+        <ListBox SelectionMode="Single" wpfAnimation:ItemsControlAnimationBehavior.ItemsSource="{Binding ListBoxItems}"
                  HorizontalContentAlignment="Stretch" Width="350" SelectedItem="{Binding SelectedItem}"
                  ItemTemplate="{StaticResource ListItemDataTemplate}">
             <ListBox.ItemContainerStyle>
@@ -112,7 +112,7 @@
                     </Style.Resources>
                 </Style>
             </ListBox.ItemContainerStyle>
-            <behaviors:ItemsSourceBehavior.AddItemAnimation>
+            <wpfAnimation:ItemsControlAnimationBehavior.AddItemAnimation>
                 <Storyboard SpeedRatio="15">
                     <DoubleAnimationUsingKeyFrames BeginTime="0:0:0" Storyboard.TargetProperty="Opacity">
                         <DoubleAnimationUsingKeyFrames.KeyFrames>
@@ -126,27 +126,27 @@
                     </DoubleAnimationUsingKeyFrames>
 
                     <DoubleAnimation BeginTime="0:0:0" Storyboard.TargetProperty="LayoutTransform.ScaleY"
-                                                 From="0.0" To="1.0" Duration="0:0:3">
+                                     From="0.0" To="1.0" Duration="0:0:3">
                         <DoubleAnimation.EasingFunction>
                             <PowerEase Power="3" EasingMode="EaseIn" />
                         </DoubleAnimation.EasingFunction>
                     </DoubleAnimation>
                     <DoubleAnimation BeginTime="0:0:3" Storyboard.TargetProperty="Opacity" From="0.0" To="1.0"
-                                                 Duration="0:0:4" />
+                                     Duration="0:0:4" />
                 </Storyboard>
-            </behaviors:ItemsSourceBehavior.AddItemAnimation>
-            <behaviors:ItemsSourceBehavior.RemoveItemAnimation>
+            </wpfAnimation:ItemsControlAnimationBehavior.AddItemAnimation>
+            <wpfAnimation:ItemsControlAnimationBehavior.RemoveItemAnimation>
                 <Storyboard SpeedRatio="15">
                     <DoubleAnimation BeginTime="0:0:0" Storyboard.TargetProperty="Opacity" To="0.0"
-                                                 Duration="0:0:2" />
+                                     Duration="0:0:2" />
                     <DoubleAnimation BeginTime="0:0:0" Storyboard.TargetProperty="LayoutTransform.ScaleY"
-                                                 To="0.0" Duration="0:0:3">
+                                     To="0.0" Duration="0:0:3">
                         <DoubleAnimation.EasingFunction>
                             <PowerEase Power="3" EasingMode="EaseIn" />
                         </DoubleAnimation.EasingFunction>
                     </DoubleAnimation>
                 </Storyboard>
-            </behaviors:ItemsSourceBehavior.RemoveItemAnimation>
+            </wpfAnimation:ItemsControlAnimationBehavior.RemoveItemAnimation>
 
         </ListBox>
         <Button Width="60" Height="25" Content="Add" VerticalAlignment="Top" Command="{Binding AddItemCommand}"/>
