--- a/src/WpfAnimation/Themes/Styles.xaml
+++ b/src/WpfAnimation/Themes/Styles.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!-- ListBox item style-->
     <DataTemplate x:Key="ListItemDataTemplate">
         <Border BorderBrush="#F2F2F2" Padding="5" BorderThickness="0 1 0 1" Margin="0 -1 0 0" >
             <Grid>
@@ -53,6 +54,8 @@
             </Style>
         </DataTemplate.Resources>
     </DataTemplate>
+    
+    <!-- ToggleButton style-->
     <ControlTemplate x:Key="ToogleButtonTemplate" TargetType="{x:Type ToggleButton}">
         <Border BorderBrush="{TemplateBinding BorderBrush}" 
 					Background="{TemplateBinding Background}" 
@@ -83,14 +86,77 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+    <ControlTemplate x:Key="ToogleButtonRightTemplate" TargetType="{x:Type ToggleButton}">
+        <Border BorderBrush="{TemplateBinding BorderBrush}" 
+					Background="{TemplateBinding Background}" 
+                    BorderThickness="{TemplateBinding BorderThickness}"
+					SnapsToDevicePixels="true"
+					CornerRadius="0 3 3 0">
+            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                Margin="{TemplateBinding Padding}" 
+                                RecognizesAccessKey="True" 
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+        </Border>
+        <ControlTemplate.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsChecked" Value="false"/>
+                    <Condition Property="IsMouseOver" Value="true"/>
+                </MultiTrigger.Conditions>
+            </MultiTrigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Background" Value="#E6E6E6"/>
+                <Setter Property="Foreground" Value="DarkGray"/>
+            </Trigger>
+            <Trigger Property="IsChecked" Value="true">
+                <Setter Property="Background" Value="#7A7A7A"/>
+                <Setter Property="BorderBrush" Value="#7A7A7A"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <ControlTemplate x:Key="ToogleButtonLeftTemplate" TargetType="{x:Type ToggleButton}">
+        <Border BorderBrush="{TemplateBinding BorderBrush}" 
+					Background="{TemplateBinding Background}" 
+                    BorderThickness="{TemplateBinding BorderThickness}"
+					SnapsToDevicePixels="true"
+					CornerRadius="3 0 0 3">
+            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                Margin="{TemplateBinding Padding}" 
+                                RecognizesAccessKey="True" 
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+        </Border>
+        <ControlTemplate.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsChecked" Value="false"/>
+                    <Condition Property="IsMouseOver" Value="true"/>
+                </MultiTrigger.Conditions>
+            </MultiTrigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Background" Value="#E6E6E6"/>
+                <Setter Property="Foreground" Value="DarkGray"/>
+            </Trigger>
+            <Trigger Property="IsChecked" Value="true">
+                <Setter Property="Background" Value="#7A7A7A"/>
+                <Setter Property="BorderBrush" Value="#7A7A7A"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
     <Style x:Key="ToogleButtonStyle" TargetType="{x:Type ToggleButton}" BasedOn="{StaticResource {x:Type ToggleButton}}">
+        <Setter Property="Height" Value="22"/>
         <Setter Property="Foreground" Value="#474747"/>
-        <Setter Property="Background" Value="#F4F4F4"/>
+        <Setter Property="Background" Value="White"/>
         <Setter Property="BorderBrush" Value="#B4B4B4"/>
-        <Setter Property="Padding" Value="7 2 7 2"/>
+        <Setter Property="Padding" Value="7 0 7 1"/>
         <Setter Property="Margin" Value="0 0 -1 0"/>
         <Setter Property="Template" Value="{StaticResource ToogleButtonTemplate}"/>
     </Style>
+    
+    <!-- Button style-->
     <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
         <Border Background="{TemplateBinding Background}" 
 					BorderBrush="{TemplateBinding BorderBrush}"
@@ -115,10 +181,11 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
+        <Setter Property="Height" Value="22"/>
         <Setter Property="Foreground" Value="#474747"/>
-        <Setter Property="Background" Value="#F4F4F4"/>
+        <Setter Property="Background" Value="White"/>
         <Setter Property="BorderBrush" Value="#B4B4B4"/>
-        <Setter Property="Padding" Value="7 2 7 2"/>
+        <Setter Property="Padding" Value="9 0 9 1"/>
         <Setter Property="Margin" Value="0 0 -1 0"/>
         <Setter Property="Template" Value="{StaticResource ButtonTemplate}"/>
     </Style>
